--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,10 +14,10 @@
         "plugin:@typescript-eslint/recommended",
         "plugin:@angular-eslint/recommended",
         "plugin:@angular-eslint/template/process-inline-templates",
-        "prettier/@typescript-eslint",
         "plugin:prettier/recommended"
       ],
       "rules": {
+        "no-console": "error",
         "@angular-eslint/directive-selector": [
           "error",
           {
