style: настроено форматирование на сохранение файла, отформатированы все файлы

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "eslint.validate": [ "javascript", "typescript", "html"],
+  "eslint.validate": ["javascript", "typescript", "html"],
 
   "eslint.options": {
     "extensions": [".js", ".ts", "html"]
@@ -10,6 +10,8 @@
   ],
 
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": "always",
-  }
+    "source.fixAll.eslint": "always"
+  },
+
+  "editor.formatOnSave": true
 }
