--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:coverage": "jest --coverage",
     "lint": "eslint src/",
     "lint:fix": "eslint src/ --fix",
+    "format": "prettier --write src/**/*.{html,js,ts,css,scss,md,json}",
     "prepare": "husky"
   },
   "lint-staged": {
@@ -29,7 +30,8 @@
     "@angular/router": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.2"
+    "zone.js": "~0.14.2",
+    "jest-preset-angular": "^14.0.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.0.5",
@@ -51,7 +53,6 @@
     "husky": "^9.0.11",
     "jasmine-core": "~5.1.0",
     "jest": "^29.7.0",
-    "jest-preset-angular": "^14.0.3",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
