--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@ngneat/until-destroy": "^10.0.0",
+    "@ngxs/store": "^3.8.2",
+    "jest-preset-angular": "^14.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.2",
-    "jest-preset-angular": "^14.0.3"
+    "zone.js": "~0.14.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.0.5",
