--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ngneat/until-destroy": "^10.0.0",
     "@ngxs/store": "^3.8.2",
     "jest-preset-angular": "^14.0.3",
+    "jsonwebtoken": "^9.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
