--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -24,4 +24,4 @@ jobs:
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4.6.0
         with:
-          folder: .
+          folder: dist/browser
