--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ngxs/store": "^3.8.2",
     "jest-preset-angular": "^14.0.3",
     "jsonwebtoken": "^9.0.2",
+    "primeicons": "^7.0.0",
     "primeng": "^17.15.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
