build: убрать требование eslint на this из пайпов

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -50,6 +50,12 @@
       "rules": {
         "import/prefer-default-export": "off"
       }
+    },
+    {
+      "files": ["*.pipe.ts"],
+      "rules": {
+        "class-methods-use-this": "off"
+      }
     }
   ]
 }
