--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "lint-staged": {
     "*.{js,ts}": [
-      "npm run lint"
+      "eslint"
     ]
   },
   "private": true,
@@ -29,10 +29,10 @@
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@ngneat/until-destroy": "^10.0.0",
-    "@ngxs/store": "^3.8.2",
     "@ngxs/devtools-plugin": "^3.8.2",
+    "@ngxs/store": "^3.8.2",
+    "crypto-js": "^4.2.0",
     "jest-preset-angular": "^14.0.3",
-    "jsonwebtoken": "^9.0.2",
     "primeicons": "^7.0.0",
     "primeng": "^17.15.0",
     "rxjs": "~7.8.0",
@@ -48,9 +48,9 @@
     "@angular-eslint/template-parser": "17.3.0",
     "@angular/cli": "^17.0.5",
     "@angular/compiler-cli": "^17.0.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~5.1.0",
     "@types/jest": "^29.5.12",
-    "@types/jsonwebtoken": "^9.0.6",
     "@typescript-eslint/eslint-plugin": "7.2.0",
     "@typescript-eslint/parser": "7.2.0",
     "eslint": "^8.57.0",
@@ -62,7 +62,6 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
-    "ts-node": "^10.9.2",
     "typescript": "~5.2.2"
   }
 }
