--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@ngxs/store": "^3.8.2",
     "crypto-js": "^4.2.0",
     "jest-preset-angular": "^14.0.3",
+    "jwt-decode": "^4.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^17.15.0",
     "rxjs": "~7.8.0",
