build: изменение настроек генерации компонент

--- a/angular.json
+++ b/angular.json
@@ -9,7 +9,8 @@
         "@schematics/angular:component": {
           "style": "scss",
           "changeDetection": "OnPush",
-          "skipTests": true
+          "skipTests": true,
+          "standalone": false
         },
         "@schematics/angular:directive": {
           "skipTests": true
