--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ngneat/until-destroy": "^10.0.0",
     "@ngxs/devtools-plugin": "^3.8.2",
     "@ngxs/store": "^3.8.2",
+    "chart.js": "^4.4.2",
     "crypto-js": "^4.2.0",
     "jest-preset-angular": "^14.0.3",
     "jwt-decode": "^4.0.0",
@@ -49,6 +50,7 @@
     "@angular-eslint/template-parser": "17.3.0",
     "@angular/cli": "^17.0.5",
     "@angular/compiler-cli": "^17.0.0",
+    "@types/chart.js": "^2.9.41",
     "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~5.1.0",
     "@types/jest": "^29.5.12",
