--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "@ngxs/devtools-plugin": "^3.8.2",
     "@ngxs/store": "^3.8.2",
     "chart.js": "^4.4.2",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "crypto-js": "^4.2.0",
+    "date-fns": "^3.6.0",
     "jest-preset-angular": "^14.0.3",
     "jwt-decode": "^4.0.0",
     "primeicons": "^7.0.0",
