--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
       ],
       "rules": {
         "no-console": "error",
+        "import/prefer-default-export": "off",
         "@angular-eslint/directive-selector": [
           "error",
           {
@@ -44,12 +45,6 @@
         "plugin:@angular-eslint/template/accessibility"
       ],
       "rules": {}
-    },
-    {
-      "files": ["*.component.ts", "*.module.ts", "*.pipe.ts", "*.service.ts"],
-      "rules": {
-        "import/prefer-default-export": "off"
-      }
     },
     {
       "files": ["*.pipe.ts", "*.state.ts"],
